Button fixes and letterspacing

--- a/static/css/layout/buttons.scss
+++ b/static/css/layout/buttons.scss
@@ -19,7 +19,10 @@ input:focus{
 	font-weight: 700;
 	text-shadow: 0 1px 1px rgba(0,0,0,0.1);
 	border-radius: 4px; // Rounded = Default
-	letter-spacing: 0px;
+}
+.header .btn, 
+.header input {
+	letter-spacing: 0.5px;
 }
 .btn-pill {
 	border-radius: 50px; 
