--- a/static/css/layout/type.scss
+++ b/static/css/layout/type.scss
@@ -33,6 +33,7 @@ h1 {
 .header h1 {
 	color:#fff;
 	font-size: 3.5em;
+	line-height: 1.1;
 	max-width: 700px;
 	margin: 0 auto;
 }
