--- a/static/css/pages/home.scss
+++ b/static/css/pages/home.scss
@@ -6,7 +6,7 @@
 	margin-top:56px;
 	overflow: hidden;
 	position: relative;
-	padding-top:$space48;
+	padding-top:$space40;
 }
 
 .ss-framer img {
